--- a/BtcMarkets/BtcMarkets.Wallet/Styles.xaml
+++ b/BtcMarkets/BtcMarkets.Wallet/Styles.xaml
@@ -222,7 +222,20 @@
         <Setter Property="WidthRequest" Value="25"></Setter>
 
     </Style>
-    <Style x:Key="MarketListFrame" TargetType="Frame">
+    <Style x:Key="DimText" TargetType="Label">
+        <Setter Property="TextColor" Value="{DynamicResource DimTextColor1}"/>
+    </Style>
+    <Style x:Key="SmallDimText" TargetType="Label" BasedOn="{StaticResource DimText}">
+        <Setter Property="FontSize" Value="Small"/>
+    </Style>
+    <Style x:Key="MicroDimText" TargetType="Label" BasedOn="{StaticResource DimText}">
+        <Setter Property="FontSize" Value="Micro"/>
+    </Style>
+    <Style x:Key="MediumDimText" TargetType="Label" BasedOn="{StaticResource DimText}">
+        <Setter Property="FontSize" Value="Medium"/>
+    </Style>
+
+            <Style x:Key="MarketListFrame" TargetType="Frame">
         <Setter Property="CornerRadius" Value="5"/>
         <Setter Property="BackgroundColor" Value="{DynamicResource ReverseBackgroundColor}"/>
         <Setter Property="HasShadow" Value="false"/>
