--- a/BtcMarkets/BtcMarkets.Wallet/Themes/LightTheme.xaml
+++ b/BtcMarkets/BtcMarkets.Wallet/Themes/LightTheme.xaml
@@ -46,5 +46,5 @@
     <Color x:Key="ErrorMessageColor">#CB4335</Color>
     <Color x:Key="MessageColor">#2E86C1</Color>
     <Color x:Key="ErrorColor1">#BF360C</Color>
-
+    <Color x:Key="DimTextColor1">#979A9A</Color>
 </ResourceDictionary>
